log
Mon 04 Sep 2023 06:11:25 PM UTC: 
 tests:  0|6
total_score: 0/70
e53ed77
Fri 08 Sep 2023 06:03:37 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fcc59da
Fri 08 Sep 2023 06:56:11 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a669523
Fri 08 Sep 2023 07:47:06 PM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:10: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   75 |   return map;
      |          ^~~
      |          mapa
hashmap.c:75:10: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6af77c8
Fri 08 Sep 2023 07:47:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a47086
Fri 08 Sep 2023 11:05:37 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
7c4d552
Fri 08 Sep 2023 11:15:59 PM UTC: 
 hashmap.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:29: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   52 |     indice = (indice + 1) % map->capacity;
      |                             ^~~
      |                             mapa
hashmap.c:52:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0043af3
Fri 08 Sep 2023 11:16:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:57:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   57 |   map -> current = indice;
      |   ^~~
      |   mapa
hashmap.c:57:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
91c7192
Fri 08 Sep 2023 11:16:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
81262d9
Fri 08 Sep 2023 11:28:01 PM UTC: 
 hashmap.c | 28 ++++++++++++++++------------
 1 file changed, 16 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 30/70
de3121a
Fri 08 Sep 2023 11:32:30 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ab75716
Fri 08 Sep 2023 11:33:37 PM UTC: 
 hashmap.c | 23 ++++++++---------------
 1 file changed, 8 insertions(+), 15 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ddf3d56
Fri 08 Sep 2023 11:33:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0a92297
Fri 08 Sep 2023 11:34:41 PM UTC: 
 hashmap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  5|4
total_score: 30/70
0a92297
Fri 08 Sep 2023 11:38:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
632a671
Fri 08 Sep 2023 11:41:36 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  8|3
total_score: 40/70
3e0c078
Fri 08 Sep 2023 11:43:05 PM UTC: 
 hashmap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  8|3
total_score: 40/70
e93fccd
Sat 09 Sep 2023 12:10:18 AM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|2
total_score: 50/70
0cbfe34
Sat 09 Sep 2023 12:10:54 AM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  11|2
total_score: 50/70
964d733
Sat 09 Sep 2023 12:11:25 AM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  11|2
total_score: 50/70
dfba5e2
Sat 09 Sep 2023 12:12:31 AM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  11|2
total_score: 50/70
64f257d
Sat 09 Sep 2023 12:26:17 AM UTC: 
 hashmap.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:133:6: error: redefinition of ‘enlarge’
  133 | void enlarge(HashMap * map) {
      |      ^~~~~~~
hashmap.c:56:6: note: previous definition of ‘enlarge’ with type ‘void(HashMap *)’ {aka ‘void(struct HashMap *)’}
   56 | void enlarge(HashMap * mapa)
      |      ^~~~~~~
Compilation failed
fad10e2
Sat 09 Sep 2023 12:27:24 AM UTC: 
 hashmap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
In file included from test.c:4:
hashmap.c:133:6: error: redefinition of ‘enlarge’
  133 | void enlarge(HashMap * map)
      |      ^~~~~~~
hashmap.c:56:6: note: previous definition of ‘enlarge’ with type ‘void(HashMap *)’ {aka ‘void(struct HashMap *)’}
   56 | void enlarge(HashMap * mapa)
      |      ^~~~~~~
Compilation failed
58d5993
Sat 09 Sep 2023 12:29:13 AM UTC: 
 hashmap.c | 42 +++++++++++++++++++-----------------------
 1 file changed, 19 insertions(+), 23 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:58:25: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   58 |   Pair ** old_buckets = map->buckets;
      |                         ^~~
      |                         mapa
hashmap.c:58:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2bd1f9c
Sat 09 Sep 2023 12:29:46 AM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:73:17: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   73 |       insertMap(map, old_buckets[i]->key, old_buckets[i]->value);
      |                 ^~~
      |                 mapa
hashmap.c:73:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c259047
Sat 09 Sep 2023 12:29:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
6939d7b
Sat 09 Sep 2023 12:31:50 AM UTC: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  14|1
total_score: 60/70
518b684
Sat 09 Sep 2023 12:33:05 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
test.c: In function ‘nextMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:511:1: error: expected declaration or statement at end of input
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
00c5362
